--- a/about.html
+++ b/about.html
@@ -19,6 +19,8 @@
   <link href="./CSS/about.css" rel="stylesheet">
   <link href="./CSS/style.css" rel="stylesheet">
   
+
+
 </head>
 <body>
 
@@ -34,9 +36,11 @@
       </button>
       <div class="collapse navbar-collapse me-auto" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item mx-3"><a class="nav-link" href="index.html">VILLA</a></li>
-          <li class="nav-item mx-3"><a class="nav-link" href="about.html">ABOUT US</a></li>
-          <li class="nav-item mx-3"><a class="nav-link" href="contact.html">CONTACT</a></li>
+          <li class="nav-item mx-3"><a class="nav-link" href="index.html">HOME</a></li>
+          <li class="nav-item mx-3"><a class="nav-link" href="villa.html">VILLA</a></li>
+          <li class="nav-item mx-3"><a class="nav-link" href="itempage.html">ITEMS</a></li>
+          <li class="nav-item mx-3"><a class="nav-link active" href="about.html">ABOUT US</a></li>
+          <li class="nav-item mx-3"><a class="nav-link" href="contact.html">CONTACT US</a></li>
         </ul>
       </div>
     </div>
