--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
-    <link rel="stylesheet" href="./CSS/contact-style.css">    
+    <link rel="stylesheet" href="CSS/contact-style.css">    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&family=Rufina:wght@400;700&display=swap" rel="stylesheet">
@@ -23,7 +23,13 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-white">
                       <li class="nav-item fs-6">
-                        <a class="nav-link active" aria-current="page" href="index.html">VILLAS</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                      </li>
+                      <li class="nav-item fs-6">
+                        <a class="nav-link active" aria-current="page" href="villa.html">VILLA's</a>
+                      </li>
+                      <li class="nav-item fs-6">
+                        <a class="nav-link active" aria-current="page" href="itempage.html">ITEMS</a>
                       </li>
                       <li class="nav-item fs-6">
                         <a class="nav-link" href="about.html">ABOUT US</a>
@@ -35,20 +41,13 @@
             </nav>
 
         <div class="heading text-center py-5">
-            <h1 class="mt-3" style="
-            font-family: Rufina;
-            font-size: 60px;
-            font-weight: 700;
-            line-height: 72px;
-            letter-spacing: 0em;
-            text-align: center;
-            ">Contact us</h1>
+            <h1 class="mt-3">Contact us</h1>
             <p>We're always here to answer your questions.<br> Reach out and we'll get back to you as soon as possible.</p>
         </div>
         <section>
-            <div class="container  d-flex flex-column flex-md-row py-5">
+            <div class="container g-3 d-flex flex-column flex-md-row py-5">
                 <div class="contact-leftside col-md-6 text-center">
-                    <img src="./accessories/Rectangle 133.png " alt="" width="90%">
+                    <img src="" alt="">
                 </div>
                 <div class="contact-rightside col-md-6 ps-md-5 py-3">
                     <div class="pt-5">
