--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-        <link rel="stylesheet" href="CSS/style.css">
-        <link rel="stylesheet" href="CSS/style-swiper.css">
+        <link rel="stylesheet" href="./CSS/style.css">
+        <link rel="stylesheet" href="./CSS/style-swiper.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -30,7 +30,13 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 text-white">
                       <li class="nav-item fs-6">
+                        <a class="nav-link active" aria-current="page" href="index.html">HOME</a>
+                      </li>
+                      <li class="nav-item fs-6">
                         <a class="nav-link active" aria-current="page" href="#">VILLAS</a>
+                      </li>
+                      <li class="nav-item fs-6">
+                        <a class="nav-link active" aria-current="page" href="itempage.html">ITEMS</a>
                       </li>
                       <li class="nav-item fs-6">
                         <a class="nav-link" href="about.html">ABOUT US</a>
